Current Version: @@VERSION@@

ctags-5.4 (Tue Oct 15 2002)
* Improved ability for tagsOpen() in readtags library to report failure to
  open tag file, adding new fields to tagFileInfo structure.
* Added '$' a valid character for C identifier [VMS].
* Added support for recording routine argument declarations for C-like
  languages. See the --fields option and man page section TAG FILE FORMAT for
  more information [C, C++, Java].
* Added class and method support to TCL parser [TCL].
* Added support for PL/SQL language.
* Added support for Vera language, inspired by Dave Eggum [Vera].
* Fixed inverted test causing TMPDIR to be used for temporary files when
  ctags is setuid instead of when not setuid [Bug #623713].
* Fixed problem terminating Perl POD block [Perl, Bug #612019].
* Fixed problem with leading spaces before instruction [TCL, Bug #615928].

ctags-5.3.1 (Thu Sep 12 2002)
* Renamed tagsSetSorted() to tagsSetSortType() and "sorted" member of
  tagFileInfo structure of readtags library to "sort".
* Added new function, tagsFirst() to readtags library.
* Fixed incorrect tag kinds [Verilog].
* Fixed null tags for unnamed BLOCK DATA statements [Fortran].
* Fixed missing tags for function preceded by "<SID>" [Vim].
* Fixed missing tags for equate statements not in column 1 [Asm, Bug #538629].
* Fixed Ruby parser (why didn't the compiler report my screw-up?) [Ruby].

ctags-5.3 (Wed Jul 17 2002)
* Allowed --etags-include option without input files.
* Changed Asm parser to back to C-based parser to remove redundant tags,
  and extending its support for more variants [Asm].
* Changed to using _tempnam() to create temporary files on Windows, allowing
  "TMP" environment variable to set temporary directory.
* Changed the -x output to match that of traditional ctags when the --format=1
  option is supplied. The new format was also changed slightly to conform more
  closely to the original format, with the addition of the extra tag type field.